[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["pure-rust-locales", "serde"] }
clap = { version = "3.2.17", features = ["yaml", "env", "derive", "wrap_help"] }
colored = "2.0.0"
device_query = "1.1.1"
